<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDarkPurple"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/about_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Empty view under the toolbar-->
        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/design_layout_more"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <!--About title icon-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info_black_24dp"
                />

            <!--Separation View-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@android:color/darker_gray"/>

            <!--First title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/about_secret_goal_title"
                android:textSize="20sp"/>

            <!--First Explanation-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_secret_goal"/>

            <!--Github link-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Copy Source code Github link : "/>

                <ImageButton
                    android:id="@+id/about_github_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/design_button"
                    android:padding="5dp"
                    android:src="@drawable/ic_content_copy_black_24dp"/>

            </LinearLayout>

            <!--Separation View-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@android:color/darker_gray"/>

            <!--Second title-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/about_dev_title"
                android:textSize="20sp"/>

            <!--Second explanation-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_dev_description"/>

            <!--Separation View-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@android:color/darker_gray"/>

            <!--App mail title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Application official email : "/>

            <!--App Mail detail-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/app_email"/>

                <ImageButton
                    android:id="@+id/about_app_mail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/design_button"
                    android:padding="5dp"
                    android:src="@drawable/ic_content_copy_black_24dp"/>

            </LinearLayout>

            <!--Separation View-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="20dp"
                android:background="@android:color/darker_gray"/>

            <!--Dev mail title-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Developper personal email : "/>

            <!--Dev Mail detail-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/dev_email"/>

                <ImageButton
                    android:id="@+id/about_dev_mail_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/design_button"
                    android:padding="5dp"
                    android:src="@drawable/ic_content_copy_black_24dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>